# ops-qa-bot-oai

./: .env.example  .gitignore  COMPARISON.md  README.md  pyproject.toml  run.py  run_eval.py  run_ws.py
deploy/: README.md  ops-qa-bot-oai.service  ops-qa-bot-openai.service
docs/: INDEX.md
docs/container/: troubleshooting.md
docs/gateway/: troubleshooting.md
docs/kafka/: operations.md
docs/mysql/: common_issues.md  overview.md
docs/redis/: overview.md  troubleshooting.md
eval/: RESULTS.md  cases.json
ops_qa_bot_oai/: __init__.py  actions.py  bot.py  cli.py  db_query.py  diagnostics.py  doc_qa.py  evaluate.py  feedback_stats.py  followup.py  gateway_trace.py  guardrails.py  hooks.py  index.py  model.py  orchestration.py  prompt.py  review.py  schema.py  tools.py
ops_qa_bot_oai/feishu/: __init__.py  approvals.py  archive.py  feedback.py  followup.py  inbound.py  render.py  runner.py  session.py
tests/: test_archive_question.py  test_cancel_question.py  test_db_query.py  test_diagnostics.py  test_doc_qa.py  test_feedback.py  test_feedback_stats.py  test_feishu_image.py  test_followup.py  test_gateway_trace.py  test_help_command.py  test_post_mention_all.py  test_queue_placeholder.py  test_review.py  test_session_expiry.py  test_tools.py
